# anipy-cli

./: .gitignore  .gitmodules  .main.py.un~  404.html  CONTRIBUTING.md  Dockerfile.termux  README.md  anipy-cli.py  anipy_cli.py  config.py  disclaimer.md  flake.nix  index.html  install-linux.sh  install.sh  main.py  main.py~  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  shell.nix  test_new.py
.github/: pypi.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs-publish.yml  generate-decode.yaml  python-publish.yml  setup-image.yml
anipy-api/: pyproject.toml
anipy-api/src/: __init__.py  anime.py  version.py
anipy-api/src/player/: base.py  player.py
anipy-api/src/player/players/: __init__.py  mpv.py  syncplay.py  vlc.py
anipy-api/src/provider/providers/: gogo_provider.py
anipy-cli/: pyproject.toml
anipy-cli/src/: __init__.py  cli.py  config.py  history.py  mal_proxy.py  util.py
anipy-cli/src/clis/: base_cli.py  binge_cli.py  default_cli.py  download_cli.py  history_cli.py
anipy-cli/src/menus/: __init__.py  mal_menu.py  menu.py  seasonal_menu.py
anipy_cli/: __init__.py  anime.py  anime_info.py  arg_parser.py  cli.py  colors.py  config.py  config_default.yaml  discord.py  download.py  error.py  history.py  mal.py  mal2.py  mal_mapping.py  misc.py  player.py  query.py  run_anipy_cli.py  seasonal.py  url_handler.py  version.py
anipy_cli/cli/: __init__.py  arg_parser.py  cli.py  colors.py  mal_proxy.py  util.py
anipy_cli/cli/clis/: __init__.py  base_cli.py  binge_cli.py  default_cli.py  download_cli.py  history_cli.py  mal_cli.py  seasonal_cli.py
anipy_cli/cli/menus/: __init__.py  base_menu.py  mal_menu.py  menu.py  seasonal_menu.py
anipy_cli/player/: __init__.py  base.py  player.py
anipy_cli/player/players/: __init__.py  base.py  mpv.py  mpv_contrl.py  mpv_control.py  syncplay.py  vlc.py
anipy_cli/provider/: __init__.py  base.py  base_provider.py  error.py  filter.py  utils.py
anipy_cli/provider/providers/: __init__.py  gogo_provider.py
api/: README.md  pyproject.toml
api/src/anipy_api/: __init__.py  anilist.py  anime.py  discord.py  download.py  error.py  history.py  locallist.py  mal.py  seasonal.py
api/src/anipy_api/player/: __init__.py  base.py  player.py
api/src/anipy_api/player/players/: __init__.py  iina.py  mpv.py  mpv_control.py  syncplay.py  vlc.py
api/src/anipy_api/provider/: __init__.py  base.py  filter.py  provider.py  utils.py
api/src/anipy_api/provider/providers/: __init__.py  allanime_provider.py  animekai_provider.py  animetoast_provider.py  anivibe_provider.py  gogo_provider.py  native_provider.py  yugen_provider.py
availabilty/: index.html
changelog/: index.html
cli/: README.md  pyproject.toml
cli/src/anipy_cli/: __init__.py  anilist_proxy.py  arg_parser.py  cli.py  colors.py  config.py  discord.py  download_component.py  logger.py  mal_proxy.py  prompts.py  util.py
cli/src/anipy_cli/clis/: __init__.py  anilist_cli.py  base_cli.py  binge_cli.py  default_cli.py  download_cli.py  history_cli.py  mal_cli.py  seasonal_cli.py
cli/src/anipy_cli/comps/: DownloadComp.py  __init__.py  download_component.py
cli/src/anipy_cli/menus/: __init__.py  anilist_menu.py  base_menu.py  mal_menu.py  menu.py  seasonal_menu.py
contributing/: index.html
docs/: anipycli_as_lib.py  assets  availabilty.md  index.md  install.md  license.md  sample_config.yaml
docs/contributing/: index.md
docs/getting-started-api/: index.md
docs/getting-started-api/examples/: anime.md  downloader.md  locallist.md  myanimelist.md  player.md  provider.md
docs/getting-started-cli/: index.md
docs/reference/: index.md
getting-started-api/: index.html
getting-started-api/examples/anime/: index.html
getting-started-api/examples/downloader/: index.html
getting-started-api/examples/locallist/: index.html
getting-started-api/examples/myanimelist/: index.html
getting-started-api/examples/player/: index.html
getting-started-api/examples/provider/: index.html
getting-started-cli/: index.html
history/: history.txt
reference/: index.html
reference/SUMMARY/: index.html
reference/anipy_api/anilist/: index.html
reference/anipy_api/anime/: index.html
reference/anipy_api/download/: index.html
reference/anipy_api/error/: index.html
reference/anipy_api/locallist/: index.html
reference/anipy_api/mal/: index.html
reference/anipy_api/player/base/: index.html
reference/anipy_api/player/player/: index.html
reference/anipy_api/player/players/iina/: index.html
reference/anipy_api/provider/base/: index.html
reference/anipy_api/provider/filter/: index.html
reference/anipy_api/provider/provider/: index.html
reference/anipy_api/provider/utils/: index.html
scripts/: animekai_decoded.py  bump_version.sh  gen_ref_pages.py  poetry_dev.py
scripts/decoder/: index.js  package-lock.json  package.json
search/: search_index.json
src/: .gitignore  binge.py  colors.py  download.py  history.py  menu.py  play.py  query.py  seasonal.py  tools.py  url.py
tests/: README.md  pytest.ini  runtests.py
tests/config/: test_config.py  test_config.yaml
tests/download/: test_download.py
tests/episode_handling/: test_ep_handler.py
tests/history/: test_history.py
tests/query/: test_query.py
tests/seasonal/: test_seasonal.py
tests/stream/: test_stream.py
tests/util/: config_clearer.py  config_for_tests.yaml
user_files/: seasonals.txt
win/: win-installer.bat  win-uninstaller.bat
(+10 files in other folders)
