[tool.poetry]
authors = ["sdaqo <sdaqo.dev@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/sdaqo/anipy-cli"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
anipy-cli = {path = "cli/", develop = true}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
poethepoet = "^0.25.1"
docformatter = {extras = ["tomli"], version = "^1.7.5"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.19"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"
mkdocstrings-python = "^1.10.0"

[tool.poe.tasks]
format.sequence = [
  { cmd = "black api/src cli/src" },
  { cmd = "docformatter --in-place -r api/src cli/src" }
]
# docformatter returns non-zero even if it does not fail
format.ignore_fail = "return_zero"
docs-serve = "mkdocs serve -w api/src"
docs-build = "mkdocs build"
publish = ""

[tool.docformatter]
style = "black"
