[tool.poetry]
name = "anipy-cli"
version = "0"
description = "Watch and Download anime from the comfort of your Terminal"
authors = ["sdaqo <sdaqo.dev@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/sdaqo/anipy-cli"
keywords = ["anime", "cli"]
readme = "../README.md"
package = [
  { include = "src", to = "anipy-cli" } 
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
yaspin = "^3.0.2"
inquirerpy = "^0.3.4"
appdirs = "^1.4.4"
anipy-api = { path = "../anipy-api" }

[tool.poetry.scripts]
anipy-cli = "anipy_cli.run_anipy_cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sdaqo/anipy-cli/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "version"
