[tool.poetry]
name = "anipy-api"
version = "3.2.1"
description = "api for anipy-cli"
authors = ["sdaqo <sdaqo.dev@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/sdaqo/anipy-cli"
homepage = "https://sdaqo.github.io/anipy-cli"
documentation = "https://sdaqo.github.io/anipy-cli/getting-started-api"
keywords = ["anime", "api"]
readme = "README.md"
packages = [
  {include = "anipy_api", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
python-ffmpeg = "^2.0.11"
pycryptodomex = "^3.20.0"
requests = "^2.32.0"
m3u8 = "^4.1.0"
beautifulsoup4 = "^4.12.3"
python-mpv = "^1.0.6"
dataclasses-json = "^0.6.4"
levenshtein = "^0.25.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sdaqo/anipy-cli/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

