[tool.poetry]
name = "anipy-cli"
version = "3.2.1"
description = "Watch and Download anime from the comfort of your Terminal"
authors = ["sdaqo <sdaqo.dev@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/sdaqo/anipy-cli"
homepage = "https://sdaqo.github.io/anipy-cli"
documentation = "https://sdaqo.github.io/anipy-cli/getting-started-cli"
keywords = ["anime", "cli"]
readme = "README.md"
packages = [
  {include = "anipy_cli", from = "src"} 
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
yaspin = "^3.0.2"
inquirerpy = "^0.3.4"
appdirs = "^1.4.4"
pypresence = "^4.3.0"
anipy-api = "^3.2.1"

[tool.poetry.scripts]
anipy-cli = "anipy_cli.cli:run_cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sdaqo/anipy-cli/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
